istio_demo/generic-echo/samples/generic_echo_server-DelayFaultOrAbortFault.yaml
apiVersion: v1
kind: Service
metadata:
  name: generic-echo-server-svc
spec:
  ports:
  - name: http
    port: 8033
  selector:
    app: generic-echo-server
---
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: generic-echo-server-v1
  labels:
    app: generic-echo-server
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: generic-echo-server
      version: v1
  template:
    metadata:
      labels:
        app: generic-echo-server
        version: v1
    spec:
      containers:
      - name: generic-echo-server-v1
        image: docker.io/whitewalker0506/generic_echo_server:2.0.5
        imagePullPolicy: IfNotPresent
        args: ["-c", "/etc/generic-server/conf"]
        ports:
        - containerPort: 8033
        volumeMounts:
        - name: server-conf
          mountPath: /etc/generic-server
      volumes:
      - name : server-conf
        configMap:
          name: generic-echo-server-cm1
          items:
          - key: CONF
            path: conf
---
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: generic-echo-server-v2
  labels:
    app: generic-echo-server
    version: v2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: generic-echo-server
      version: v2
  template:
    metadata:
      labels:
        app: generic-echo-server
        version: v2
    spec:
      containers:
      - name: generic-echo-server
        image: docker.io/whitewalker0506/generic_echo_server:2.0.5
        imagePullPolicy: IfNotPresent
        args: ["-c", "/etc/generic-server/conf"]
        ports:
        - containerPort: 8033
        volumeMounts:
        - name: server-conf
          mountPath: /etc/generic-server
      volumes:
      - name : server-conf
        configMap:
          name: generic-echo-server-cm2
          items:
          - key: CONF
            path: conf
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: generic-echo-server-dr
spec:
  host: generic-echo-server-svc.default.svc.cluster.local
  trafficPolicy:
    loadBalancer:
      simple: LEAST_CONN
  subsets:
  - name: v1
    labels:
      version: v1
    trafficPolicy:
      loadBalancer:
        simple: ROUND_ROBIN
  - name: v2
    labels:
      version: v2
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: generic-echo-server-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "generic-echo-server-svc.default.svc.cluster.local"
    - 10.0.1.179
---
# injecting an HTTP delay fault
# v1 負責外部流量，且設定 respond timeout 10s，delay 10s sql 回傳時間
# v2 負責 mesh 流量
# 所以會造成外部在獲取回應時會造成 503 
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: generic-echo-vsvc
spec:
  hosts: 
  - "generic-echo-server-svc.default.svc.cluster.local"
  - 10.0.1.179
  gateways:
  - generic-echo-server-gateway
  - mesh
  http:
  - fault:
      delay:
        fixedDelay: 7s
        percentage:
          value: 100
    match:
    - gateways:
      - generic-echo-server-gateway
    route:
      - destination:
          host: generic-echo-server-svc.default.svc.cluster.local
          subset: v1

  - route:
    - destination:
        host: generic-echo-server-svc.default.svc.cluster.local
        subset: v2

# injecting an HTTP abort fault
# v1 負責外部流量，且設定 respond timeout 10s，delay 10s sql 回傳時間
# v2 負責 mesh 流量
# 所以會造成外部得到 500 錯誤訊息
# apiVersion: networking.istio.io/v1alpha3
# kind: VirtualService
# metadata:
#   name: generic-echo-vsvc
# spec:
#   hosts: 
#   - "generic-echo-server-svc.default.svc.cluster.local"
#   - 10.0.1.179
#   gateways:
#   - generic-echo-server-gateway
#   - mesh
#   http:
#   - fault:
#       abort:
#         httpStatus: 500
#         percentage:
#           value: 100
#     match:
#     - gateways:
#       - generic-echo-server-gateway
#     route:
#       - destination:
#           host: generic-echo-server-svc.default.svc.cluster.local
#           subset: v1

#   - route:
#     - destination:
#         host: generic-echo-server-svc.default.svc.cluster.local
#         subset: v2
